[package]
name = "my_bevy_game"
version = "0.1.0"
edition = "2021" # this needs to be 2021, or you need to set "resolver=2"

[dependencies]
bevy = "0.11" # make sure this is the latest version


#if you are using Cargo Workspaces, you will also need to add the resolver to your Cargo.toml file in the root directory:
#how do I know then? can I included it just in case?
[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!


